Several endpoints added and mandatories are finished
